  o Added option to just verify if you have the fonts. (AMZ)
  o You can now collect fonts directly to a zipped archive. (AMZ)
  o Fixed behavior of the Escape key in it. (AMZ)
  o Redesigned the interface and replaced the log window with a much better Scintilla control. (AMZ)
  o You can now collect multiple times without reopening the dialog. (AMZ)
- Added a much-needed options dialog with all the relevant config.dat options in it. (AMZ)
- Various fixes to better handle paths/file names with non-ANSI characters on Windows (jfs/AMZ)
- Misc. fixes for building on Linux (Azzy, equinox, jfs)
- Added an option to automatically save the files whenever you change anything. (AMZ)
- Added global hotkey for Video Play (default Ctrl+P). (AMZ)
- Commiting changes in audio to the last line will insert a new line after it. (AMZ)
- Added two options that allows you to specify where to keep the audio cache. (AMZ)
- Improved Splash Screen behavior to show up even if the program is frozen loading subtitles, and to center on the current display. (AMZ)
- Aegisub now remembers if it was maximized when it was last quit, and restores its state when opening again. (AMZ)
- A few minor fixes to the Find dialogue regarding initial focus and the behavior of the Escape key. (AMZ)
- Added a "Selection Onward" option to the Shift Times dialogue. (AMZ)
- Added a Normal/Reverse dropdown to collisions on Script Properties. (AMZ)
- Implemented a version checker that can automatically or manually check if there are any updates to Aegisub. (AMZ)
- Timing Post-Processor can now be restricted to selection. (AMZ)
- Added Kanji Timing (AKA Karaoke Timing Copy) functionality. (Dansolo)
- Added an audio clip export by right clicking on a line. (Dansolo)
- Added a clear button for shifting history. (Dansolo)
- Added shortcut keys (escape to close and delete to delete a style, plus ctrl+c/v for copy/paste) to style manager. (Dansolo)